<resources>
    <string name="app_name">KEcommerce</string>
    <string name="firebase_authentication_credentical">619783069246-fhvuhke6g77b13eeubn6m75u7bjb9djv.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_us">Email Us</string>
    <string name="call_us">Call</string>
    <string name="wish_list">Wish List</string>
    <string name="Task_Successful">Task SuccessFull</string>


    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="largeText">Hmm. We’re having trouble finding that site.  We can’t connect to the server at developer.android.com.  If that address is correct, here are three other things you can try:      Try again later.     Check your network connection.     If you are connected but behind a firewall, check that Firefox has permission to access the Web.  Hmm. We’re having trouble finding that site.  We can’t connect to the server at developer.android.com.  If that address is correct, here are three other things you can try:      Try again later.     Check your network connection.     If you are connected but behind a firewall, check that Firefox has permission to access the Web. Hmm. We’re having trouble finding that site.  We can’t connect to the server at developer.android.com.  If that address is correct, here are three other things you can try:      Try again later.     Check your network connection.     If you are connected but behind a firewall, check that Firefox has permission to access the Web. Hmm. We’re having trouble finding that site.  We can’t connect to the server at developer.android.com.  If that address is correct, here are three other things you can try:      Try again later.     Check your network connection.     If you are connected but behind a firewall, check that Firefox has permission to access the Web. Hmm. We’re having trouble finding that site.  We can’t connect to the server at developer.android.com.  If that address is correct, here are three other things you can try:      Try again later.     Check your network connection.     If you are connected but behind a firewall, check that Firefox has permission to access the Web. Hmm. We’re having trouble finding that site.  We can’t connect to the server at developer.android.com.  If that address is correct, here are three other things you can try:      Try again later.     Check your network connection.     If you are connected but behind a firewall, check that Firefox has permission to access the Web.</string>
    <string name="enter_email">Enter Email</string>

    <string name="google_LogIn">You are not Logged In</string>
    <string name="successfull_login">SuccessFully Login</string>
    <string name="user_name">User Name</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="value_any_category">All food</string>
    <string name="value_any_city">Anywhere</string>
    <string name="value_any_price">Any price</string>

    <string name="price_1">$</string>
    <string name="price_2">$$</string>
    <string name="price_3">$$$</string>

    <string name="label_category">Category</string>
    <string name="label_city">City</string>
    <string name="label_price">Price</string>
    <string name="label_sort_by">Sort By</string>

    <string name="fmt_num_ratings" translatable="false">(%d)</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="header_filters">Filter</string>
    <string name="search">Search</string>

    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_price">Sort by Price</string>

    <string name="sorted_by_rating">sorted by rating</string>
    <string name="sorted_by_price">sorted by price</string>
    <string name="sorted_by_popularity">sorted by popularity</string>

    <string name="add_random_items">Add Random Items</string>
    <string name="delete_all">Delete All</string>
    <string name="divider_bullet">•</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="hint_review">How was your experience?</string>
    <string name="submit">Submit</string>
    <string name="filter_add_review">Add review</string>


    <string-array name="categories">
        <item>@string/value_any_category</item>

        <item>Brunch</item>
        <item>Burgers</item>
        <item>Coffee</item>
        <item>Deli</item>
        <item>Dim Sum</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Ramen</item>
        <item>Sushi</item>
    </string-array>

    <!-- 50 most populous cities in the US -->
    <string-array name="cities">
        <item>@string/value_any_city</item>

        <item>Albuquerque</item>
        <item>Arlington</item>
        <item>Atlanta</item>
        <item>Austin</item>
        <item>Baltimore</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Colorado Springs</item>
        <item>Columbus</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>El Paso</item>
        <item>Fort Worth</item>
        <item>Fresno</item>
        <item>Houston</item>
        <item>Indianapolis</item>
        <item>Jacksonville</item>
        <item>Kansas City</item>
        <item>Las Vagas</item>
        <item>Long Beach</item>
        <item>Los Angeles</item>
        <item>Louisville</item>
        <item>Memphis</item>
        <item>Mesa</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Nashville</item>
        <item>New York</item>
        <item>Oakland</item>
        <item>Oklahoma</item>
        <item>Omaha</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Raleigh</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>San Francisco</item>
        <item>San Jose</item>
        <item>Tucson</item>
        <item>Tulsa</item>
        <item>Virginia Beach</item>
        <item>Washington</item>
    </string-array>

    <!-- Price filters -->
    <string-array name="prices">
        <item>@string/value_any_price</item>

        <item>@string/price_1</item>
        <item>@string/price_2</item>
        <item>@string/price_3</item>
    </string-array>

    <!-- Ways you can sort restaurants -->
    <string-array name="sort_by">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_popularity</item>
        <item>@string/sort_by_price</item>
    </string-array>


    <!--- Price High To Low -->
    <string name="price_highToLow">Price (High To Low)</string>
    <string name="price_lowToHigh">Price (Low To High)</string>
    <string name="rating_highToLow">Rating High to Low</string>
    <string name="user_name_hint">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile_email">Email</string>
    <string name="address">Address</string>
    <string name="latest">Latest Arrivals</string>
    <string name="popular">POPULAR</string>
    <string name="remove_button">Remove</string>
    <string name="quantity_label">QTY:</string>
    <string name="default_product_quantity">1</string>
    <string name="validphone">must Provide Valid Phone Number</string>
    <string name="fullyQualifeddName">provide Full Name</string>
    <string name="full_address">provide Full Address</string>
    <string name="section_see_all">show More</string>

</resources>
