<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data
        class="ProfileDataBinding">
        <variable
            name="viewModel"
            type="image.crystalapps.kecommerce.ui.mainactivity.fragments.profile.ProfileViewModel"
            />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="70dp"
            android:src="@color/backgroundcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Shahzaib Lashari"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />


        <TextView
            android:id="@+id/editUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{(view)->viewModel.openProfileDialog(view)}"
            android:background="@drawable/profile_style"
            android:drawableEnd="@drawable/edit_icon"
            android:hint="@string/user_name_hint"
            android:clickable="true"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username1" />


        <TextView
            android:id="@+id/editPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/profile_style"
            android:drawableEnd="@drawable/edit_icon"
            android:hint="@string/phone_number"
            android:onClick="@{(view)->viewModel.openProfileDialog(view)}"
            android:padding="8dp"
            android:layout_marginStart="20dp"
            android:paddingLeft="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUserName" />

        <TextView
            android:id="@+id/editEmail"
            android:onClick="@{(view)->viewModel.openProfileDialog(view)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_style"
            android:drawableEnd="@drawable/edit_icon"
            android:hint="@string/profile_email"
            android:padding="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:paddingLeft="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPhoneNumber" />

        <TextView
            android:id="@+id/editAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_style"
            android:drawableEnd="@drawable/edit_icon"
            android:hint="@string/address"
            android:onClick="@{(view)->viewModel.openProfileDialog(view)}"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:padding="8dp"
            android:paddingLeft="5dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>