<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data
        class="FilterDataBinding">

        <variable
            name="viewModel"
            type="image.crystalapps.kecommerce.ui.productselection.dialogfragment.FilterViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:background="@color/backgroundcolor"
        >

        <TextView
            style="@style/AppTheme.Title"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/header_filters" />

        <!-- Food Type -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

<!--            <ImageView-->
<!--                android:id="@+id/icon_category"-->
<!--                style="@style/AppTheme.FilterIcon"-->
<!--                android:layout_centerVertical="true"-->
<!--                app:tint="@color/greySecondary"-->
<!--                app:srcCompat="@drawable/ic_fastfood_white_24dp" />-->

            <Spinner
                android:id="@+id/spinner_category"
                style="@style/AppTheme.FilterSpinner"
                android:layout_centerVertical="true"
                android:entries="@array/categories" />

        </RelativeLayout>

        <!-- Location -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<!--            <ImageView-->
<!--                android:id="@+id/icon_city"-->
<!--                style="@style/AppTheme.FilterIcon"-->
<!--                android:layout_centerVertical="true"-->
<!--                app:tint="@color/greySecondary"-->
<!--                app:srcCompat="@drawable/ic_place_white_24px" />-->

            <Spinner
                android:id="@+id/spinner_city"
                style="@style/AppTheme.FilterSpinner"
                android:layout_centerVertical="true"
                android:entries="@array/cities" />

        </RelativeLayout>

        <!-- Price -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<!--            <ImageView-->
<!--                android:id="@+id/icon_price"-->
<!--                style="@style/AppTheme.FilterIcon"-->
<!--                android:layout_centerVertical="true"-->
<!--                app:tint="@color/greySecondary"-->
<!--                app:srcCompat="@drawable/ic_monetization_on_white_24px" />-->




            <Spinner
                android:id="@+id/spinner_price"
                style="@style/AppTheme.FilterSpinner"
                android:layout_centerVertical="true"
                android:entries="@array/prices" />

        </RelativeLayout>

        <!-- Sort by -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<!--            <ImageView-->
<!--                android:id="@+id/icon_sort"-->
<!--                style="@style/AppTheme.FilterIcon"-->
<!--                android:layout_centerVertical="true"-->
<!--                app:tint="@color/greySecondary"-->
<!--                app:srcCompat="@drawable/ic_sort_white_24px" />-->

            <Spinner
                android:id="@+id/spinner_sort"
                style="@style/AppTheme.FilterSpinner"
                android:layout_centerVertical="true"
                android:entries="@array/sort_by" />
        </RelativeLayout>

        <!-- Cancel and apply buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_cancel"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/backgroundcolor"
                android:theme="@style/ThemeOverlay.FilterButton" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply"
                android:theme="@style/ThemeOverlay.FilterButton" />
        </LinearLayout>
    </LinearLayout>

</layout>